Changed all the jQuery and jQuery UI code to match with the original download as I didn't know what version of jQuery UI goes with jQuery 3.4.1.

--- a/jQueryCRUDMy/Views/User/Index.cshtml
+++ b/jQueryCRUDMy/Views/User/Index.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Index";
 }
 
-<script src="~/Scripts/jquery-3.4.1.min.js"></script>
-<script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
-<link href="~/Content/themes/base/jquery-ui.1.12.1.css" rel="stylesheet" />
+<script src="~/Scripts/jquery-1.7.1.min.js"></script>
+<script src="~/Scripts/jquery-ui-1.8.20.min.js"></script>
+<link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
 
 <script>
     $(document).ready(function () {
@@ -120,7 +120,7 @@
 <div id="dialogAlert">
     <p>
         @TempData["Message"]
-</p>
+    </p>
 </div>
 <div id="dialogConfirm">
     <p>
